@@ -59,6 +59,9 @@ DirectWrite
 DirectInput
 	* Fixed a typo in Device.GetObjectInfoById that caused it to return info by usage instead.
 	* Changed ObjectProperties.LogicalRange and ObjectProperties.PhysicalRange to return actual ranges instead of integers.
+
+Multimedia
+	* Added XWMAStream class for loading xWMA files.
 	
 XAPO
 	* Fixed the flow of calls to the XAPO interfaces and their implementations.
